♻️ 改写编译逻辑, 添加一个不自带runtime的版本
    修改pom.xml, 将launch4j-maven-plugin放在profile中, 不再默认使用
    同步修改release-*.sh脚本中的-Plaunch4j
    修改action文件, 将win-without-runtime.tar加入release